[package]
name = "gitanalysis"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/zTgx/gitanalysis.git"
readme = "README.md"
keywords = [ "git", "analysis", "git log", "github" ]
categories = [ "config" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "git log's analysis in Rust"

[dependencies]
