[package]
name = "gitapi-rs"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/zTgx/gitapi-rs.git"
readme = "README.md"
keywords = [ "git", "api", "git-log", "github" ]
categories = [ "api-bindings" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "git api in Rust"

[dependencies]
