[package]
name = "gitapi-rs"
version = "0.1.2"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/zTgx/gitapi-rs.git"
readme = "README.md"
keywords = [ "git", "api", "git-log", "github" ]
categories = [ "api-bindings" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "git api in Rust"

[dependencies]
curl = "0.4.22"
cast-rs = "0.2.0"
serde_json = "1.0.40"
